--- a/web/composer.json
+++ b/web/composer.json
@@ -27,7 +27,14 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        }
+        },
+        "files": [
+            "app/Helpers/TanggalIndonesia.php",
+            "app/Helpers/Tanggal.php",
+            "app/Helpers/Formatuang.php",
+            "app/Helpers/AngkaTerbilang.php"
+        ]
+        
     },
     "autoload-dev": {
         "psr-4": {
