--- a/web/.env
+++ b/web/.env
@@ -1,4 +1,4 @@
-APP_NAME=Laravel
+APP_NAME=UGTracer
 APP_ENV=local
 APP_KEY=base64:6VMSO+W8bSdYF17C5V+MwJLLdNwwul5BFCbkWxx+1jo=
 APP_DEBUG=true
@@ -28,13 +28,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=465
-MAIL_USERNAME=khuntoria17121998@gmail.com
-MAIL_PASSWORD=YourGmailPassword
-MAIL_ENCRYPTION=ssl
-MAIL_FROM_ADDRESS=khuntoria17121998@gmail.com
-MAIL_FROM_NAME="UG-Tracer"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=0ce31af6e4c86b
+MAIL_PASSWORD=c798fa78221136
+MAIL_ENCRYPTION=tls
+#MAIL_FROM_ADDRESS=smtp.mailtrap.io
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
