--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,8 @@
 {
     "require": {
         "phpoffice/phpspreadsheet": "^1.18"
+    },
+    "config": {
+        "platform-check": false
     }
 }
